<resources>
    <string name="app_name">SystemNotes</string>

    <!-- Strings for botton navigation menu -->
    <string name="bookString">Группы</string>
    <string name="addString">Добавить</string>
    <string name="searchString">Сервис</string>
    <string name="settingsString">Настройки</string>
    <string name="ipAddressString">IP АДРЕС</string>
    <string name="portString">ПОРТ</string>
    <string name="loginString">ЛОГИН</string>
    <string name="passwordString">ПАРОЛЬ</string>
    <string name="logInAndSycnString">РАЗБЛОКИРОВАТЬ</string>
    <string name="openGroup">ОТКРЫТЬ</string>
    <string name="title">ТЕМА:</string>
    <string name="ipNetwork">IP ADDRESS:</string>
    <string name="subnetMask">SUBNET MASK:</string>
    <string name="gateway">GATEWAY:</string>
    <string name="dns">DNS:</string>

    <string name="NameOfNote">ЗАГОЛОВОК</string>
    <string name="TextOfNote">ТЕКСТ</string>
    <string name="CreateNoteButton">СОЗДАТЬ ЗАМЕТКУ</string>

    <string name="hello_blank_fragment">notesFragment</string>

    <string name="MACOfDevice">MAC УСТРОЙСТВА</string>
    <string name="startMeasuring">ИЗМЕРИТЬ WiFi</string>
    <string name="stopMeasuring">ОСТАНОВИТЬ</string>


</resources>