<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    tools:context=".Fragments.Level1.Settings"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutSettings_1"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:hint="@string/ipAddressString"
            android:layout_marginRight="5dp"
            style="@style/style_text_input_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:hint="@string/portString"
            android:layout_marginLeft="5dp"
            style="@style/style_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutSettings_2"
        android:layout_below="@id/linearLayoutSettings_1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:hint="@string/loginString"
            android:layout_marginRight="5dp"
            style="@style/style_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:hint="@string/passwordString"
            android:layout_marginLeft="5dp"
            style="@style/style_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSettings_3"
            android:layout_below="@id/linearLayoutSettings_2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/logInAndSycnString"/>
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>